<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="false"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_background" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignStart="@id/ll_main_sign"
        android:layout_alignEnd="@id/ll_main_sign"
        android:layout_above="@id/ll_main_sign"
        android:layout_margin="@dimen/icon_margin"
        >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clickable="false"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_logo_alien"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/ll_main_sign"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="@dimen/info_margin"
        android:layout_marginRight="@dimen/info_margin"
        android:background="@drawable/ic_wood_horizontal"
        android:orientation="vertical"
        android:padding="30dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/btnMargin"
            android:fontFamily="@font/jainem"
            android:gravity="center"
            android:text="Wild West Reflex"
            android:textSize="30dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/hintNamePlayer1">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_player1_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/hintNamePlayer2">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_player2_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/hintRoundAmount">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_round_amount"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="number"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_quick_game"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/btnMargin"
                android:layout_weight="1"
                android:text="@string/btn_quick_game" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_custom_game"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/btnMargin"
                android:layout_weight="1"
                android:text="@string/btn_begin" />

        </LinearLayout>
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="@dimen/info_margin"
        android:lineHeight="27dp"
        android:text="@string/info_quick_game"
        android:textAlignment="center"
        android:textSize="20dp" />
</RelativeLayout>