<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="false"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_background" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"

        android:layout_marginBottom="@dimen/info_margin">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_cowboy"
                android:layout_width="match_parent"
                android:layout_height="160dp"
                app:srcCompat="@drawable/ic_cowboy"
                android:layout_marginBottom="@dimen/btnMargin"/>

            <TextView
                android:id="@+id/tv_player1_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ailerons"
                android:text="@string/player_1_name"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/game_tag" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_alien"
                android:layout_width="match_parent"
                android:layout_height="160dp"
                app:srcCompat="@drawable/ic_alien"
                android:layout_marginBottom="@dimen/btnMargin"/>

            <TextView
                android:id="@+id/tv_player2_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ailerons"
                android:text="@string/player_2_name"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/game_tag" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/btnMargin"
        android:orientation="horizontal"
        android:gravity="center">


        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/current_winner"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/data_text_size"
            android:fontFamily="@font/jainem"/>

        <TextView
            android:id="@+id/tv_winner_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:textSize="@dimen/data_text_size"
            android:fontFamily="@font/ailerons"
            android:text="@string/tie" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="@dimen/data_text_size"
            android:fontFamily="@font/jainem"
            android:text="@string/rounds"
            android:textColor="@color/colorPrimaryDark"/>

        <TextView
            android:id="@+id/tv_current_round"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:fontFamily="@font/ailerons"
            android:textSize="@dimen/data_text_size"
            android:text="" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_get_ready"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="80sp"
        android:textColor="@color/colorAccent"
        android:fontFamily="@font/jainem"
        android:layout_centerInParent="true"
        android:text=""
        android:visibility="gone"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:orientation="horizontal">

        <View
            android:id="@+id/btnPlayer1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <View
            android:id="@+id/btnPlayer2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1" />
    </LinearLayout>

</RelativeLayout>